--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "nuitka>=2.8.9",
     "pydantic>=2.12.5",
-    "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "rich>=14.2.0",
-    "textual>=6.11.0",
+    "rich-argparse>=1.7.2",
 ]
