--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "nuitka>=2.8.9",
+    "platformdirs>=4.5.1",
     "pydantic>=2.12.5",
     "requests>=2.32.5",
     "rich>=14.2.0",
